--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ FRONTEND_URL=http://localhost:3000
 
 DB_HOST=localhost
 DB_USER=root
-DB_PASSWORD=neighbornet
+DB_PASSWORD=Alpha2023*
 DB_NAME=neighbornet
 
 JWT_SECRET=neighbornet_super_secret_key_2025_change_this_in_production_abc123xyz
