--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,10 @@ FRONTEND_URL=http://localhost:3000
 
 # Node Environment
 NODE_ENV=development
+
+# Email Configuration
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=your-email@gmail.com
+SMTP_PASS=your-app-password
+EMAIL_FROM="NeighborNet <noreply@neighbornet.com>"
