--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "morgan": "^1.10.0",
     "multer": "^2.0.2",
     "mysql2": "^3.6.5",
+    "nodemailer": "^7.0.11",
     "validator": "^13.11.0"
   },
   "devDependencies": {
