--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "multer": "^2.0.2",
     "mysql2": "^3.6.5",
     "nodemailer": "^7.0.11",
+    "sharp": "^0.34.5",
+    "socket.io": "^4.8.1",
     "validator": "^13.11.0"
   },
   "devDependencies": {
